--- a/Pragyan/FinTech/client/package.json
+++ b/Pragyan/FinTech/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "lucide": "^0.475.0",
+    "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
